Added a lot of ignore files

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,18 @@
 /TestVs2017/TestVs2017/Debug/
 *.dep
 /CppTrainingDoxyfile
+/OpenGl/Demo1/.vs/
+/OpenGl/Demo3/Demo3/x64/Debug/Demo2.tlog/unsuccessfulbuild
+/OpenGl/Demo2/.vs/
+/OpenGl/Demo3/.vs/
+/TestBreakPoints/.vs/
+/TestBreakPoints/TestBreakPoints/Debug/
+*.dmp
+*.i64
+/OpenGl/Libs/
+/OpenGl/Demo3/Demo3/x64/Debug/Demo3.tlog/unsuccessfulbuild
+/WordsGenerator/.vs/
+/InterviewAlgorithms/.vs/
+/OpenGl/Demo2/Demo2/x64/
+/InterviewAlgorithms/InterviewAlgorithms/.vs/
+/InterviewAlgorithms/InterviewAlgorithms/x64/Debug/
