Added tic tack toe inital project

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,5 @@
 /InterviewAlgorithms/InterviewAlgorithms/x64/Debug/
 /SchedulerProblem/SchedulerProblemCpp/.vs/
 *.suo
+/TIC-TAC-TOE/.vs/
+/InterviewAlgorithms/InterviewAlgorithms/TIC-TAC-TOE/.vs/
