Added tic tack toe inital project

--- a/InterviewAlgorithms/InterviewAlgorithms/TIC-TAC-TOE/TIC-TAC-TOE/TIC-TAC-TOE.vcxproj.filters
+++ b/InterviewAlgorithms/InterviewAlgorithms/TIC-TAC-TOE/TIC-TAC-TOE/TIC-TAC-TOE.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="Mai.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CAppBoard.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
