--- a/InterviewAlgorithms/InterviewAlgorithms/TIC-TAC-TOE/TIC-TAC-TOE/TIC-TAC-TOE.vcxproj
+++ b/InterviewAlgorithms/InterviewAlgorithms/TIC-TAC-TOE/TIC-TAC-TOE/TIC-TAC-TOE.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CAppBoard.cpp" />
     <ClCompile Include="Mai.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
