Added ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@
 *.suo
 /TIC-TAC-TOE/.vs/
 /InterviewAlgorithms/InterviewAlgorithms/TIC-TAC-TOE/.vs/
+/InterviewAlgorithms/InterviewAlgorithms/Debug/
