Added main solutin

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,10 @@
 /TIC-TAC-TOE/.vs/
 /InterviewAlgorithms/InterviewAlgorithms/TIC-TAC-TOE/.vs/
 /InterviewAlgorithms/InterviewAlgorithms/Debug/
+/.vs/
+/Exceptions/Exceptions/Debug/
+/CppAsembly/MASAM_Test/.vs/
+/CppAsembly/MASAM_Test/MASAM_Test/Debug/
+/OpenGl/Demo1/Demo1/Debug/
+/Debug/
+/ConsoleInputEcho/ConsoleInputEcho/ConsoleInputEcho/Debug/
