--- a/CppUniversityBasic/UniversityBasic/UniversityBasic.vcxproj
+++ b/CppUniversityBasic/UniversityBasic/UniversityBasic.vcxproj
@@ -139,6 +139,69 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\BasicMatrixIOOperation.cpp" />
+    <ClCompile Include="..\botsk.cpp" />
+    <ClCompile Include="..\cartest.cpp" />
+    <ClCompile Include="..\Cdat.cpp" />
+    <ClCompile Include="..\classinhdemo.cpp" />
+    <ClCompile Include="..\DemoLista.cpp" />
+    <ClCompile Include="..\dropka.cpp" />
+    <ClCompile Include="..\forlopp.cpp" />
+    <ClCompile Include="..\freqsort.cpp" />
+    <ClCompile Include="..\ftest.cpp" />
+    <ClCompile Include="..\gets_unit.cpp" />
+    <ClCompile Include="..\human_account.cpp" />
+    <ClCompile Include="..\Iminja_vo_tekst.cpp" />
+    <ClCompile Include="..\Iminja_vo_tekst_unit.cpp" />
+    <ClCompile Include="..\instrument.cpp" />
+    <ClCompile Include="..\intervalpiq.cpp" />
+    <ClCompile Include="..\kolicnikdondecimali.cpp" />
+    <ClCompile Include="..\listopp.cpp" />
+    <ClCompile Include="..\liststart.cpp" />
+    <ClCompile Include="..\loadmat.cpp" />
+    <ClCompile Include="..\matrixoperation.cpp" />
+    <ClCompile Include="..\mform.cpp" />
+    <ClCompile Include="..\myflist.cpp" />
+    <ClCompile Include="..\Najdi_zbor.cpp" />
+    <ClCompile Include="..\neoenigma.cpp" />
+    <ClCompile Include="..\numbconvert.cpp" />
+    <ClCompile Include="..\palindrom_unit.cpp" />
+    <ClCompile Include="..\Permutacija.cpp" />
+    <ClCompile Include="..\permutealg.cpp" />
+    <ClCompile Include="..\pi_unit.cpp" />
+    <ClCompile Include="..\podniza_pal.cpp" />
+    <ClCompile Include="..\pointer.cpp" />
+    <ClCompile Include="..\pointerstest.cpp" />
+    <ClCompile Include="..\pont1.cpp" />
+    <ClCompile Include="..\pre.cpp" />
+    <ClCompile Include="..\prostorija.cpp" />
+    <ClCompile Include="..\prozvodnaprostimn.cpp" />
+    <ClCompile Include="..\pwd.cpp" />
+    <ClCompile Include="..\recmat.cpp" />
+    <ClCompile Include="..\redukcija_na_niza_unit.cpp" />
+    <ClCompile Include="..\redukcija_po_frekfencija.cpp" />
+    <ClCompile Include="..\refrence_array.cpp" />
+    <ClCompile Include="..\rek.cpp" />
+    <ClCompile Include="..\Rek_fak.cpp" />
+    <ClCompile Include="..\sortmatrixcolum.cpp" />
+    <ClCompile Include="..\spoini.cpp" />
+    <ClCompile Include="..\stack.cpp" />
+    <ClCompile Include="..\startclass.cpp" />
+    <ClCompile Include="..\stream.cpp" />
+    <ClCompile Include="..\stringtest.cpp" />
+    <ClCompile Include="..\subni.cpp" />
+    <ClCompile Include="..\systemtest.cpp" />
+    <ClCompile Include="..\test.cpp" />
+    <ClCompile Include="..\thecar.cpp" />
+    <ClCompile Include="..\tik.cpp" />
+    <ClCompile Include="..\timer.cpp" />
+    <ClCompile Include="..\transpone.cpp" />
+    <ClCompile Include="..\verizna_dropka.cpp" />
+    <ClCompile Include="..\vraboteni.cpp" />
+    <ClCompile Include="..\vraboten_nasled.cpp" />
+    <ClCompile Include="..\workwithfiles.cpp" />
+    <ClCompile Include="..\zborvodat.cpp" />
+    <ClCompile Include="..\zborzb.cpp" />
     <ClCompile Include="UniversityBasic.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
