Added wrapper for deprecated function clrscr

--- a/CppUniversityBasic/UniversityBasic/UniversityBasic.vcxproj.filters
+++ b/CppUniversityBasic/UniversityBasic/UniversityBasic.vcxproj.filters
@@ -207,5 +207,13 @@
     <ClCompile Include="..\BasicMatrixIOOperation.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MyClScr.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="MyClScr.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
