--- a/CppUniversityBasic/UniversityBasic/UniversityBasic.vcxproj
+++ b/CppUniversityBasic/UniversityBasic/UniversityBasic.vcxproj
@@ -202,7 +202,11 @@
     <ClCompile Include="..\workwithfiles.cpp" />
     <ClCompile Include="..\zborvodat.cpp" />
     <ClCompile Include="..\zborzb.cpp" />
+    <ClCompile Include="MyClScr.cpp" />
     <ClCompile Include="UniversityBasic.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="MyClScr.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
