--- a/TemplatesDemo/TemplatesDemo.vcxproj.filters
+++ b/TemplatesDemo/TemplatesDemo.vcxproj.filters
@@ -15,18 +15,27 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\Cpp11_featuers\Cpp11_featuers\MyTemplates.h">
+    <ClInclude Include="..\Cpp11_featuers\loguru.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\Cpp11_featuers\loguru.hpp">
+    <ClInclude Include="MyTemplates.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Tester.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\Cpp11_featuers\Cpp11_featuers\MyTemplates.cpp">
+    <ClCompile Include="..\Cpp11_featuers\loguru.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\Cpp11_featuers\loguru.cpp">
+    <ClCompile Include="MyTemplates.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MyTemplatesMain.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Tester.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
